Made a new branch because I pushed stuff I wasn't supposed to to the last one and I don't know of an easier way to undo that

--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -88,6 +88,11 @@
                         <span class="fa fa-star fa-lg unchecked"></span>
                     </div>
                     <div class="col-12 my-2">
+                        {% if favorite == 1 %}
+                            <button class="btn"><i class="fa-solid fa-heart"></i></button>
+                        {% else %}
+                            <button class="btn"><i class="fa-regular fa-heart"></i></button>
+                        {% endif %}
                         <p class="primary-color">
                             {{ product.description }}
                         </p>
