Cart and checkout pages.... and paypal wip

--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -58,6 +58,7 @@
                                 value="{{ product.productId }}">Add To Cart</button>
                     </div>
                     <div>
+                    <table class="primary-color">
                         <tr>
                             <th>Name</th>
                             <th>Rating</th>
@@ -72,6 +73,8 @@
                                 </tr>
                             {% endfor %}
                         </tr>
+                    </table>
+
                     </div>
                 </div>
 
