--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -11,6 +11,9 @@
                     <a href="/account"><i class="fa fa-user"></i> Account </a>
                 </li>
                 <li class="hover">
+                    <a href="/favorite"><i class="fa fa-bookmark"></i> Saved Products </a>
+                </li>
+                <li class="hover">
                     <a href="/followed"><i class="fa fa-bookmark"></i> Saved Creators </a>
                 </li>
                 <hr class="border-0 w-75 align-self-center m-3" style="background-color: #E8DCCD; height:3px;">
