--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -2,13 +2,27 @@
 {% block content %}
     {% load static %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
-        <h2 class="primary-color text-left my-5">My Favorites</h2>
-        {% for product in favorites %}
-            {% include 'product_card.html' %}
-        {% endfor %}
+        <div class="d-grid m-auto h-100 w-100 align-content-start gap-3 p-3">
+            <div class="row d-flex flex-wrap w-100 rounded-1 position-relative">
+                <div class="col-1 arrow-icon left-arrow btn btn-primary position-absolute" id="left-arrow">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </div>
+                <div class="d-flex col-12 ps-4" id="content">
+                    <div class="d-flex w-100 flex-wrap">
+                        {% for product in favorites %}
+                            {% include 'product_card.html' %}
+                        {% endfor %}
+                    </div>
+                </div>
+                <div class="arrow-icon right-arrow btn btn-primary position-absolute" id="right-arrow">
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="{% static 'js/cart.js' %}"></script>
+    <script src="{% static 'js/favorite.js' %}"></script>
 {% endblock %}
