changed styling for quantity button

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -25,7 +25,7 @@
                             <div class="align-items-center col-12 col-md-1 d-flex">
                                 <input class="item-qty col-12 btn p-2 btn-primary" type="number" name="quantity_{{ item.product.productId }}"
                                        value="{{ item.quantity }}" min="1" onchange="checkQuantityChange(this)"/>
-                                <button type="submit" class="update-btn" style="display: none;">Update Quantity</button>
+                                <button type="submit" class="col-9 p-1 btn-primary btn update-btn" style="display: none;">Update Quantity</button>
                             </div>
                             <div class="col-12 col-md-3">
                                 <h6 class="col-12 text-center">Item Price</h6>
