--- a/templates/storefront.html
+++ b/templates/storefront.html
@@ -76,7 +76,7 @@
                 </button>
             </div>
             <div class="d-flex col-3 justify-content-end">
-                <a href="/createproduct" class="hover btn m-2 btn-primary"
+                <a href="{% url 'AddProductView' store_id=store.storeId %}" class="hover btn m-2 btn-primary"
                 style="max-width: 300px; max-height: 40px" id="createBtn"> Create Product</a>
             </div>
             <div class="col-lg-9">
