Minor changes to registration and login pages, including a home button

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8">
     {% block head %}
     {% endblock %}
-    <title>Homepage</title>
+    <title>ShopSavvy</title>
 </head>
 <body class="d-grid w-100 overflow-x-hidden">
 <div class="row d-flex flex-nowrap align-items-center align-content-center py-3 ps-0 mx-auto w-100 position-fixed"
