--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/productcard.css' %}">
+{% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="d-grid m-auto h-100 w-100 align-content-start gap-3 p-3">
