--- a/templates/login.html
+++ b/templates/login.html
@@ -4,29 +4,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>ShopSavvy - Login</title>
+    <script src="https://kit.fontawesome.com/0a86d3bf39.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> <!-- Include your custom CSS file -->
 </head>
+<style>
+    .login-input {
+        background-color: transparent !important;
+        color: #e3d7c9 !important;
+        border: solid 3px #e3d7c9;
+    }
+
+    #header {
+        z-index: 3;
+        top: 0;
+        max-height: 55px;
+        background-color: #161718;
+    }
+
+    html, body {
+        height: 100%;
+        width: 100%;
+    }
+
+
+    #main {
+        background: #212529;
+        margin: 0;
+        left: 0;
+    }
+</style>
 <body>
-<section class="bg-dark vh-100">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center w-100 h-100">
+<section class="d-grid overflow-x-hidden bg-dark vh-100 w-100 h-100">
+    <div class="row d-flex flex-nowrap align-items-center align-content-center py-3 ps-0 mx-auto w-100"
+         id="header">
+        <div class="w-100 col-lg-1 col-sm-1">
+            <a href="/" class="btn btn-primary btn-sm border-0"><i class="fa fa-home fa-xl"></i></a>
+        </div>
+    </div>
+    <div class="container h-100 mx-auto" id="main">
+        <div class="row d-flex justify-content-center w-100 h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div>
-                    <div class="p-5 text-center">
+                    <div class="p-3 text-center">
                         <form method="post" action="{% url 'UserLoginView' %}">
                             {% csrf_token %}
                             <h3 class="primary-color mb-5">Sign in</h3>
 
                             <div class="form-outline mb-4">
-                                <input type="text" id="username" name="username" class="form-control form-control-lg login-input"/>
+                                <input type="text" id="username" name="username"
+                                       class="form-control form-control-lg login-input"/>
                                 <label class="form-label primary-color" for="username">Username</label>
                             </div>
 
                             <div class="form-outline mb-4">
-                                <input type="password" id="password" name="password" class="form-control form-control-lg login-input"/>
+                                <input type="password" id="password" name="password"
+                                       class="form-control form-control-lg login-input"/>
                                 <label class="form-label primary-color" for="password">Password</label>
                             </div>
                             <button class="btn btn-primary w-75" type="submit">Login</button>
