--- a/templates/register.html
+++ b/templates/register.html
@@ -4,25 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>ShopSavvy - Registration</title>
+    <script src="https://kit.fontawesome.com/0a86d3bf39.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}"> <!-- Include your custom CSS file -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 </head>
+<style>
+    .login-input {
+        background-color: transparent !important;
+        color: #e3d7c9 !important;
+        border: solid 3px #e3d7c9;
+    }
+</style>
 <body>
-<section class="bg-dark vh-100">
-    <div class="toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
-        <div class="toast-body text-center text-white">
-
+<section class="d-grid overflow-x-hidden bg-dark vh-100 w-100 h-100">
+    <div class="row d-flex flex-nowrap align-items-center align-content-center py-3 ps-0 mx-auto w-100"
+         id="header">
+        <div class="col-lg-1 col-sm-1">
+            <a href="/" class="btn-sm btn btn-primary border-0"><i class="fa fa-home fa-xl"></i></a>
         </div>
     </div>
-    <div class="container py-5 h-100">
+    <div class="container h-100 mx-auto" id="main">
+        <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
+            <div class="toast-body text-center text-white">
+
+            </div>
+        </div>
         <div class="row d-flex justify-content-center align-items-center w-100 h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
                 <div>
-                    <div class="p-5 text-center">
+                    <div class="p-3 text-center">
                         <h3 class="primary-color mb-5">Register</h3>
                         <form id="registrationForm">
                             <div class="form-outline mb-4">
@@ -36,12 +51,14 @@
                                 <label class="form-label primary-color" for="email">Email</label>
                             </div>
                             <div class="form-outline mb-4">
-                                <input type="password" class="form-control form-control-lg login-input" id="password1"
+                                <input type="password" class="form-control form-control-lg login-input"
+                                       id="password1"
                                        name="password1">
                                 <label class="form-label primary-color" for="password1">Password</label>
                             </div>
                             <div class="form-outline mb-4">
-                                <input type="password" class="form-control form-control-lg login-input" id="password2"
+                                <input type="password" class="form-control form-control-lg login-input"
+                                       id="password2"
                                        name="password2"
                                        placeholder="Confirm Password">
                                 <label class="form-label primary-color" for="password1">Confirm Password</label>
