Css, registration, login changes

--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block head %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/productdetail.css' %}">
+{% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="m-auto h-100 w-100 gap-3 p-3">
