--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+
     <meta charset="UTF-8">
-    <title>Homepage</title>
+    {% block head %}
+    {% endblock %}
+    <title>ShopSavvy</title>
 </head>
 <body class="d-grid w-100 overflow-x-hidden">
 <div class="row d-flex flex-nowrap align-items-center align-content-center py-3 ps-0 mx-auto w-100 position-fixed"
