--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,9 @@
             <input class="form-control ps-3 rounded-start-pill" type="search" id="search" placeholder="Search"
                    aria-label="Search" aria-describedby="basic-addon2">
             <div class="input-group-append">
+                <button class="btn rounded-end-pill pe-3 hover" id="filterBtn"><i class="fa fa-filter"></i></button>
+            </div>
+            <div class="input-group-append">
                 <button class="btn rounded-end-pill pe-3 hover" id="searchBtn"><i class="fa fa-search"></i></button>
             </div>
         </div>
