--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -19,17 +19,14 @@
     {% endif %}
     <div class="">
         <div>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg checked"></span>
-            <span class="fa fa-star fa-lg unchecked"></span>
-            <span class="fa fa-star fa-lg unchecked"></span>
+        <span class="fa fa-star fa-lg checked"></span>
+        <span class="fa fa-star fa-lg checked"></span>
+        <span class="fa fa-star fa-lg checked"></span>
+        <span class="fa fa-star fa-lg unchecked"></span>
+        <span class="fa fa-star fa-lg unchecked"></span>
         </div>
-        {% if favorite == 1 %}
-            <button class="btn"><i class="fa-solid fa-heart"></i></button>
-        {% else %}
-            <button class="btn"><i class="fa-regular fa-heart"></i></button>
-        {% endif %}
+
+        {% include 'update_favorite.html' with product_id=product.productId %}
         <h4 class="primary-color">{{ product.name }}</h4>
         <h5 class="primary-color">${{ product.price }}</h5>
         <a href="{% url 'vendor' store_id=product.soldByStoreId_id %}" class="primary-color">Store Name</a>
