--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -45,11 +45,7 @@
                         <span class="fa fa-star fa-lg unchecked"></span>
                     </div>
                     <div class="col-12 my-2">
-                        {% if favorite == 1 %}
-                            <button class="btn"><i class="fa-solid fa-heart"></i></button>
-                        {% else %}
-                            <button class="btn"><i class="fa-regular fa-heart"></i></button>
-                        {% endif %}
+                        {% include 'update_favorite.html' with product_id=product.productId %}
                         <p class="primary-color">
                             {{ product.description }}
                         </p>
