--- a/templates/product_card.html
+++ b/templates/product_card.html
@@ -1,32 +1,34 @@
 <div class="col-12 col-md-6 col-lg-6 col-xl-4 col-xxl-3 px-2 px-lg-5 py-4">
-
     {% if product.thumbnail %}
         <div class="image-container">
             <img src="{{ product.thumbnail.image.url }}" alt="{{ product.name }}" class="card-img-top image">
             <div class="middle">
-                <div class="text"><a href="{% url 'product_detail' product_id=product.productId %}">Product Detail</a></div>
+                <div class="text"><a href="{% url 'product_detail' product_id=product.productId %}">Product Detail</a>
+                </div>
             </div>
         </div>
 
     {% else %}
         <div class="image-container">
-            <div class="card-img-top justify-content-center d-flex align-items-center primary-color border">No Image</div>
+            <div class="card-img-top justify-content-center d-flex align-items-center primary-color border">No Image
+            </div>
             <div class="middle">
-                <div class="text"><a href="{% url 'product_detail' product_id=product.productId %}">Product Detail</a></div>
+                <div class="text"><a href="{% url 'product_detail' product_id=product.productId %}">Product Detail</a>
+                </div>
             </div>
         </div>
 
     {% endif %}
     <div class="">
         <div>
-        <span class="fa fa-star fa-lg checked"></span>
-        <span class="fa fa-star fa-lg checked"></span>
-        <span class="fa fa-star fa-lg checked"></span>
-        <span class="fa fa-star fa-lg unchecked"></span>
-        <span class="fa fa-star fa-lg unchecked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg checked"></span>
+            <span class="fa fa-star fa-lg unchecked"></span>
+            <span class="fa fa-star fa-lg unchecked"></span>
         </div>
 
-        {% include 'update_favorite.html' with product_id=product.productId %}
+        {% include 'update_favorite.html' %}
         <h4 class="primary-color">{{ product.name }}</h4>
         <h5 class="primary-color">${{ product.price }}</h5>
         <a href="{% url 'vendor' store_id=product.soldByStoreId_id %}" class="primary-color">Store Name</a>
