--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -26,9 +26,9 @@
                         <div class="row">
                             {% for image in product.images %}
                                 <div class="column">
-                                <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
-                                     onclick="currentSlide(1)" alt="{{ image.name }}">
-                            </div>
+                                    <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
+                                         onclick="currentSlide(1)" alt="{{ image.name }}">
+                                </div>
                             {% endfor %}
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                         <span class="fa fa-star fa-lg unchecked"></span>
                     </div>
                     <div class="col-12 my-2">
-                        {% include 'update_favorite.html' with product_id=product.productId %}
+                        {% include 'update_favorite.html' %}
                         <p class="primary-color">
                             {{ product.description }}
                         </p>
@@ -56,25 +56,26 @@
                     </div>
                     <div class="col-12 d-flex mt-3">
                         <button class="col-12 btn-primary btn" id="add_to_cart"
-                                value="{{ product.productId }}">Add To Cart</button>
+                                value="{{ product.productId }}">Add To Cart
+                        </button>
                     </div>
                     <div>
-                    <table class="primary-color">
-                        <tr>
-                            <th>Name</th>
-                            <th>Rating</th>
-                            <th>Comment</th>
-                            <th>Date</th>
-                            {% for r in reviews %}
-                                <tr>
-                                    <td>{{ r.reviewerId }}</td>
-                                    <td>{{ r.rating }}</td>
-                                    <td>{{ r.comment }}</td>
-                                    <td>{{ r.reviewDate }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tr>
-                    </table>
+                        <table class="primary-color">
+                            <tr>
+                                <th>Name</th>
+                                <th>Rating</th>
+                                <th>Comment</th>
+                                <th>Date</th>
+                                {% for r in reviews %}
+                                    <tr>
+                                        <td>{{ r.reviewerId }}</td>
+                                        <td>{{ r.rating }}</td>
+                                        <td>{{ r.comment }}</td>
+                                        <td>{{ r.reviewDate }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tr>
+                        </table>
 
                     </div>
                 </div>
