--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<div class="col-auto d-flex h-100 px-0" id="sidebar">
+<div class="col-auto d-flex flex-column h-100 px-0 pt-2" id="sidebar">
     <div class="collapse collapse-horizontal show" id="sidebarContent">
         <ul class="nav flex-column w-100 sticky-top" style="top:55px;min-width: 135px" id="list">
             <li class="hover item">
@@ -9,6 +9,9 @@
                 <h6 class="ps-3" style="color:#E8DCCD"> You </h6>
                 <li class="hover item">
                     <a href="/account" class="link"><i class="fa fa-user"></i> Account </a>
+                </li>
+                <li class="hover item">
+                    <a href="/orderhistory" class="link"><i class="fa fa-history"></i> Order History </a>
                 </li>
                 <li class="hover item">
                     <a href="/followed" class="link"><i class="fa fa-bookmark"></i> Saved Creators </a>
