Order history and review html

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
         </div>
     </div>
 </div>
-<div class="row d-flex h-100 pt-5" id="main">
+<div class="row d-flex h-100 pt-5 align-items-stretch" id="main">
         {% include 'sidebar.html' %}
         {% block content %}
         {% endblock %}
