--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
-<div class="col-auto d-flex flex-column h-100 px-0 pt-2" id="sidebar">
-    <div class="collapse collapse-horizontal show" id="sidebarContent">
-        <ul class="nav flex-column w-100 sticky-top" style="top:55px;min-width: 135px" id="list">
+<div class="col-auto d-flex flex-column h-100 px-0" id="sidebar">
+    <div class="collapse collapse-horizontal show sticky-top" id="sidebarContent" style="top:55px">
+        <ul class="nav flex-column w-100" style="min-width: 135px" id="list">
             <li class="hover item">
                 <a href="/" class="link hover"><i class="fa fa-home"></i> Home </a>
             </li>
