--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -2,37 +2,41 @@
 {% load static %}
 {% block head %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/productdetail.css' %}">
+    <script src="{% static 'js/product-detail.js' %}"></script>
 {% endblock %}
 {% block content %}
     <div class="col d-flex flex-column overflow-x-hidden h-100 w-100 p-4" id="content">
         <div class="m-auto h-100 w-100 gap-3 p-3">
-            <div class="container mx-auto flex-wrap w-100 w-lg-75">
-                <div class="col-12 col-md-6 h-100">
-                    <div class="pe-2 position-relative">
-
-                        {% for image in product.images %}
-                            <div class="mySlides">
-                                <img src="{{ image.image.url }}" style="width:100%">
-                            </div>
-                        {% endfor %}
-
-                        <!-- Next and previous buttons -->
-                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-                        <!-- Image text -->
-                        <div class="caption-container">
-                            <p id="caption"></p>
-                        </div>
-
-                        <!-- Thumbnail images -->
-                        <div class="row">
+            <div class="row container mx-auto flex-wrap w-100 w-lg-75">
+                <div class="col-12 col-md-6 h-100 px-3">
+                    <div class="d-flex flex-column position-relative w-100">
+                        <div class="row d-flex w-100 mx-0" id="slideContainer" style="max-height:300px">
                             {% for image in product.images %}
-                                <div class="column">
-                                <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
-                                     onclick="currentSlide(1)" alt="{{ image.name }}">
-                            </div>
+                                <div class="mySlides d-flex w-100 h-100 justify-content-center align-content-center"
+                                     style="max-height: inherit">
+                                    <img src="{{ image.image.url }}" style="object-fit: contain">
+                                </div>
                             {% endfor %}
+
+                            <!-- Next and previous buttons -->
+                            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                        </div>
+                        <div class="row d-flex">
+                            <!-- Image text -->
+                            <div class="caption-container">
+                                <p id="caption"></p>
+                            </div>
+
+                            <!-- Thumbnail images -->
+                            <div class="row">
+                                {% for image in product.images %}
+                                    <div class="column">
+                                        <img class="demo cursor" src="{{ image.image.url }}" style="width:100%"
+                                             onclick="currentSlide(1)" alt="{{ image.name }}">
+                                    </div>
+                                {% endfor %}
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -63,32 +67,61 @@
                     </div>
                     <div class="col-12 d-flex mt-3">
                         <button class="col-12 btn-primary btn" id="add_to_cart"
-                                value="{{ product.productId }}">Add To Cart</button>
+                                value="{{ product.productId }}">Add To Cart
+                        </button>
                     </div>
                     <div>
-                    <table class="primary-color">
-                        <tr>
-                            <th>Name</th>
-                            <th>Rating</th>
-                            <th>Comment</th>
-                            <th>Date</th>
-                            {% for r in reviews %}
-                                <tr>
-                                    <td>{{ r.reviewerId }}</td>
-                                    <td>{{ r.rating }}</td>
-                                    <td>{{ r.comment }}</td>
-                                    <td>{{ r.reviewDate }}</td>
-                                </tr>
-                            {% endfor %}
-                        </tr>
-                    </table>
+                        <table class="primary-color">
+                            <tr>
+                                <th>Name</th>
+                                <th>Rating</th>
+                                <th>Comment</th>
+                                <th>Date</th>
+                                {% for r in reviews %}
+                                    <tr>
+                                        <td>{{ r.reviewerId }}</td>
+                                        <td>{{ r.rating }}</td>
+                                        <td>{{ r.comment }}</td>
+                                        <td>{{ r.reviewDate }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tr>
+                        </table>
 
                     </div>
                 </div>
-
             </div>
+            {% if ordered %}
+                <div class="row mx-auto w-100 my-5">
+                    <div class="col-6">
+                        <h5 class="primary-color my-1">You've previously purchased this product</h5>
+                        <button id="toggle" class="btn btn-md btn-light my-1" onclick="toggleReview()">Write a Review</button>
+                        <div id="reviewDiv" class="position-relative w-100" style="display: none">
+                            <form id="reviewForm">
+                                <label for="subject" class="primary-color"></label>
+                                <input id="subject" type="text" placeholder="Subject"
+                                       class="w-100 p-1 btn-primary" style="border-radius: 5px"/>
+                                <br>
+                                <label for="review" class="primary-color"></label>
+                                <textarea id="review" type="text" rows="4" cols="50" placeholder="Write Review"
+                                          class="w-100 p-1 btn-primary"
+                                          style="border-radius: 5px"></textarea>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         </div>
     </div>
-    <script src="{% static 'js/product-detail.js' %}"></script>
+    <script>
+    function toggleReview() {
+            let reviewForm = document.getElementById('reviewDiv');
+            let leaveReviewBtn = document.getElementById('leaveReviewBtn');
+
+            reviewForm.style.display = reviewForm.style.display === 'none' ? 'block' : 'none';
+            reviewForm.disabled = !reviewForm.disabled;
+            leaveReviewBtn.innerHTML = leaveReviewBtn.innerHTML === 'Write a Review' ? 'Cancel' : 'Write a Review';
+        }
+    </script>
 {% endblock %}
 
