added clickable button that redirects to leave product review page

--- a/templates/product_detail.html
+++ b/templates/product_detail.html
@@ -63,6 +63,11 @@
                         </button>
                     </div>
                     <div>
+                        <div class="d-flex mt-3">
+                            <button class="col-12 btn-primary btn" id="product_review"
+                                    value="{{ product.productId }}">Leave a review!
+                            </button>
+                        </div>
                         <table class="primary-color">
                             <tr>
                                 <th>Name</th>
