--- a/templates/review_product.html
+++ b/templates/review_product.html
@@ -5,6 +5,9 @@
         <div class="m-auto h-100 w-100 gap-3 p-3">
             <div class="container mx-auto flex-wrap w-100 w-lg-75">
                 <div class="col-12 col-md-6 d-flex fit-content flex-wrap px-2">
+                    <div class="row toast w-100" id="toast" role="alert" aria-live="assertive" aria-atomic="true" data-delay="3000">
+                        <div class="toast-body text-center text-white"></div>
+                    </div>
                     <div class="col-12 mb-2 pe-5">
                         <label for="productId" class="col-12 col-lg-4 primary-color">Product Name:</label>
                         <span class="primary-color">{{ product.name }}</span>
@@ -39,6 +42,7 @@
             </div>
         </div>
     </div>
+    <script>const product_id = {{ product.productId }};</script>
     <script src="{% static 'js/product-review.js' %}"></script>
 {% endblock %}
 
