added paypal icon to checkout page

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -132,6 +132,7 @@
                         </div>
                         <div class="col-12 d-flex justify-content-center">
                             {{ paypay_payment_button.render }}
+                            <i class="fa-brands fa-cc-paypal primary-color" style="font-size: 3em;"></i>
                         </div>
                     {% else %}
                         <h3 class="primary-color text-center">You Don't Have Any Items In Cart Return To
