removed some redundant JS

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -27,7 +27,7 @@
                             </div>
                             <div class="align-items-center col-12 col-md-1 d-flex">
                                 <input class="item-qty col-12 btn p-2 btn-primary quantity-input" type="number"
-                                       value="{{ item.quantity }}" min="1" onchange="checkQuantityChange(this)"/>
+                                       value="{{ item.quantity }}" min="1"/>
                                 <button type="submit" class="col-9 p-1 btn-primary btn update-btn" id="update-quantity"
                                         data-product-id="{{ item.product.productId }}" style="display: none; margin-left:5px">Update Quantity</button>
                             </div>
