update cart template, update quantity button is now clickable and has slightly smaller font size

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -29,7 +29,7 @@
                                 <input class="item-qty col-12 btn p-2 btn-primary quantity-input" type="number"
                                        value="{{ item.quantity }}" min="1"/>
                                 <button type="submit" class="col-9 p-1 btn-primary btn update-btn" id="update-quantity"
-                                        data-product-id="{{ item.product.productId }}" style="display: none; margin-left:5px">Update Quantity</button>
+                                        data-product-id="{{ item.product.productId }}" style="display: none; margin-left:5px; z-index: 10; font-size: 0.75em;">Update Quantity</button>
                             </div>
                             <div class="col-12 col-md-3">
                                 <h6 class="col-12 text-center">Item Price</h6>
